# ProteoSphereV2

./: .gitignore  README.md  pyproject.toml
api/: __init__.py
codex_parallel_build_package/: README.md
evaluation/: post_tier1_packet_regression.py  real_example_review.py  release_corpus_completeness.py
execution/: canonical_pipeline.py  flagship_pipeline.py  reference_pipeline.py  storage_runtime.py
features/: assay_features.py  esm2_embeddings.py  interface_contacts.py  ppi_representation.py  rdkit_descriptors.py  sequence_features.py  structure_graphs.py
ml_platform_level3_spec/: automl.yaml  backend_mapping_full.yaml  gnn_full.yaml  gui_rules.yaml  layers_full.yaml  optimizers_full.yaml  pipeline_dag.yaml  schema.yaml  training_engine.yaml
protein_data_scope/: README.md  catalog_summary.md  download_all_sources.py  run_download.bat  source_policy.json  sources_manifest.json  tier1_validation_policy.json
protein_execution_canonical_spec/: provenance_schema.json  resource_manager.yaml
protein_platform_max_complete_spec/: 00_MASTER_INDEX.md
scripts/: __init__.py  advance_overnight_wave.py  affinity_interaction_preview_support.py  analyze_overnight_scrape_backlog.py  analyze_soak_anomalies.py  assess_pdb_paper_split.py  audit_data_inventory.py  audit_external_cohort.py  audit_truth_boundaries.py  auto_task_generator.py  bootstrap_repo.py  bug_bash_dashboard.py  build_audit_friendly_paper_review_pdf.py  build_lightweight_preview_bundle_assets.py  build_literature_hunt_deep_review.py  build_literature_hunt_deep_review_pdf.py  build_literature_hunt_review.py  (+416 more)
(+1563 files in other folders)
